refactor: kodu java.evolved desenleriyle Java 25'e modernize et
- POJO'lar record'a, int sabitleri enum'a dönüştürüldü
- sealed ApiException + exhaustive switch ile tek noktada hata eşleme
- JSON yazıcı ve HTTP yanıtlarında pattern matching / record patterns
- SimpleDateFormat/Calendar yerine java.time
- Hashtable/Vector/raw type yerine generic ve eşzamanlı koleksiyonlar
- wait/notify yerine BlockingQueue, Timer yerine ScheduledExecutorService
- sabit havuz yerine sanal thread'ler, istek bağlamı için ScopedValue
- Random yerine SecureRandom, HexFormat ve sabit zamanlı karşılaştırma
- JUnit 4 yerine JUnit 6, sabit Clock ile deterministik testler
- Java 25 compact source file ile HealthCheck script'i

Davranış korundu: smoke-test.sh'in 30 HTTP senaryosu eski sürümle birebir
aynı çıktıyı veriyor. Kısmi güncelleme hatası record'larla düzeldi.