@@ -4,48 +4,22 @@ import java.util.Locale;
 
 public final class StringUtils {
 
-    private static final Locale TURKISH = new Locale("tr", "TR");
+    private static final Locale TURKISH = Locale.of("tr", "TR");
 
     private StringUtils() {
     }
 
+    /// `null` güvenli `String.isBlank()`.
     public static boolean isBlank(String s) {
-        return s == null || s.trim().length() == 0;
+        return s == null || s.isBlank();
     }
 
-    public static String trimToNull(String s) {
-        if (isBlank(s)) {
-            return null;
-        }
-        return s.trim();
-    }
-
-    public static String repeat(String s, int count) {
-        StringBuffer sb = new StringBuffer();
-        for (int i = 0; i < count; i++) {
-            sb.append(s);
-        }
-        return sb.toString();
-    }
-
-    public static String padRight(String s, int width) {
-        if (s == null) {
-            s = "";
-        }
-        if (s.length() >= width) {
-            return s;
-        }
-        return s + repeat(" ", width - s.length());
-    }
-
-    /**
-     * "ayşe" -> "Ayşe", "ismail" -> "İsmail"
-     */
+    /// Türkçe kurallarıyla baş harfi büyütür: `"ismail"` → `"İsmail"`.
     public static String capitalize(String s) {
         if (isBlank(s)) {
             return s;
         }
-        String trimmed = s.trim();
-        return trimmed.substring(0, 1).toUpperCase(TURKISH) + trimmed.substring(1).toLowerCase(TURKISH);
+        var stripped = s.strip();
+        return stripped.substring(0, 1).toUpperCase(TURKISH) + stripped.substring(1).toLowerCase(TURKISH);
     }
 }
